# Fast_Nano_CV_Engine_Memory

./: .gitattributes  Cargo.toml  LICENSE  README.md  cv.yml  package.json
output/: cv.html
src/: errors.rs  lib.rs  main.rs
src/models/: cv.rs
src/parser/: yaml.rs
src/render/: html.rs  pdf.rs
src/templates/: base.html  dark.html  modern.html
