[package]
name = "fast_nano_cv_engine_memory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
genpdf = "0.2.0"
headless_chrome = "1.0.20"
napi = { version = "3.8.2", features = ["async"] }
napi-derive = "3.5.1"
printpdf = "0.8.2"
rust-embed = "8.11.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tera = "1.20.1"
thiserror = "2.0.17"
urlencoding = "2.1.3"

[lib]
crate-type = ["cdylib"]
